# mlxserver

./: .gitignore  LICENSE  README.md  requirements.txt
docs/: package-lock.json  package.json  theme.config.jsx
docs/src/pages/: _meta.json  contribution.mdx  getting-started.mdx  index.mdx  mlxserver.mdx  models.mdx
docs/src/pages/actions/: chat.mdx  convert.mdx  delete.mdx  generate.mdx  list.mdx  pull.mdx  show.mdx
mlx-server/: __init__.py  chat.py  delete.py  generate.py  pull.py  server.py  show.py  test.py
mlxserver/: LICENSE  README.md  pyproject.toml
mlxserver/src/mlxserver/: __init__.py  chat.py  delete.py  generate.py  list.py  load.py  pull.py  requirements.txt  server.py  show.py
mlxserver/src/mlxserver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
